metadata/objects/GRAX_Dynamic_Flow_Trigger__mdt.object
<CustomObject>
    <fields>
        <fullName>Date_Field_Name__c</fullName>
        <defaultValue>&quot;LastModifiedDate&quot;</defaultValue>
        <label>Date Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Unique_Name__c</fullName>
        <label>Flow Unique Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progressive_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Progressive Query?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Records_Param_Name__c</fullName>
        <defaultValue>&quot;records&quot;</defaultValue>
        <label>Records Param Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOQL_Query__c</fullName>
        <label>SOQL Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>GRAX Dynamic Flow Trigger</label>
    <pluralLabel>GRAX Dynamic Flow Triggers</pluralLabel>
</CustomObject>